k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: basesource-api-svc
  namespace: basesource
spec:
  selector:
    app: basesource-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
